# sentinela-api

./: Dockerfile  README.md  pyproject.toml  requirements.txt  sentinela.db
sentinela/: config.py  coordenadas_caatinga_filtradas.csv  database.py  main.py  middleware.py  models.py  projetos.py  pyproject.toml  weather_service.py
sentinela/collab/: projetos.py
sentinela/routes/: alert_me.py  history.py  logs.py  now.py  weather.py
sentinela/schemas/: log_schema.py
sentinela/sentinela/: app.py
sentinela/sentinela/routes/: connection_test.py
