[project]
name = "sentinela"
version = "0.1.0"
description = ""
authors = [
    {name = "SofiaValadares",email = "svc2@cesar.school"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.2"
taskipy = "^1.14.1"
ruff = "^0.11.10"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.taskipy.tasks]
run = "uvicorn sentinela.main:app --reload"
lint = "ruff check"
format = "ruff format"
test = "pytest -vv"
